@@ -107,6 +107,9 @@ GMH323EndPoint::GMH323EndPoint ()
   signallingChannelCallTimeout = PTimeInterval (0, 0, 3);
     
   NoIncomingMediaTimer.SetNotifier (PCREATE_NOTIFIER (OnNoIncomingMediaTimeout));
+  last_audio_octets_received = 0;
+  last_video_octets_received = 0;
+
   NoAnswerTimer.SetNotifier (PCREATE_NOTIFIER (OnNoAnswerTimeout));
   CallPendingTimer.SetNotifier (PCREATE_NOTIFIER (OnCallPending));
   OutgoingCallTimer.SetNotifier (PCREATE_NOTIFIER (OnOutgoingCall));
@@ -1294,10 +1297,12 @@ GMH323EndPoint::OnConnectionCleared (H323Connection & connection,
   }
 #endif
 
- 
-  /* We update the stats part */
+  /* we reset the no-data detection */
   RTPTimer.Stop ();
+  last_audio_octets_received = 0;
+  last_video_octets_received = 0;
 
+  /* We update the stats part */  
   gnomemeeting_threads_enter ();
   memset ((void *) rtp, 0, sizeof (struct _GmRtpData));
   gtk_widget_queue_draw_area (gw->stats_drawing_area, 0, 0, GTK_WIDGET (gw->stats_drawing_area)->allocation.width, GTK_WIDGET (gw->stats_drawing_area)->allocation.height);
@@ -1857,6 +1862,9 @@ GMH323EndPoint::OnRTPTimeout (PTimer &, INT)
   float lost_packets_per = 0.0;
   float late_packets_per = 0.0;
 
+  int new_audio_octets_received = 0;
+  int new_video_octets_received = 0;
+
   rtp = GnomeMeeting::Process ()->GetRtpData ();
   gw = GnomeMeeting::Process ()->GetMainWindow ();
 
@@ -1882,6 +1890,7 @@ GMH323EndPoint::OnRTPTimeout (PTimer &, INT)
 
   if (audio_session) {
 
+    new_audio_octets_received = audio_session->GetOctetsReceived();
     /* Compute the current transmitted audio speed */
     if ((rtp->tr_audio_bytes == 0) && (rtp->tr_audio_pos == 0))
       /* Default value for the 1st element */
@@ -1898,19 +1907,20 @@ GMH323EndPoint::OnRTPTimeout (PTimer &, INT)
     /* Compute the current received audio speed */
     if ((rtp->re_audio_bytes == 0) && (rtp->re_audio_pos == 0))
       /* Default value for the 1st element */
-      rtp->re_audio_bytes = audio_session->GetOctetsReceived();
+      rtp->re_audio_bytes = new_audio_octets_received;
     rtp->re_audio_speed [rtp->re_audio_pos] = 
-      (float) (audio_session->GetOctetsReceived()
-	       - rtp->re_audio_bytes)/ 1024;
-    rtp->re_audio_bytes = 
-      audio_session->GetOctetsReceived();
+      (float) (new_audio_octets_received - rtp->re_audio_bytes)/ 1024;
+    rtp->re_audio_bytes = new_audio_octets_received;
 
     rtp->re_audio_pos++;
     if (rtp->re_audio_pos >= 50) rtp->re_audio_pos = 0;
   }
+  else
+    new_audio_octets_received = last_audio_octets_received;
 
   if (video_session) {
 
+    new_video_octets_received = video_session->GetOctetsReceived();
     /* Compute the current transmitted video speed */
     if ((rtp->tr_video_bytes == 0) && (rtp->tr_video_pos == 0)) 
       /* Default value for the 1st element */
@@ -1927,22 +1937,22 @@ GMH323EndPoint::OnRTPTimeout (PTimer &, INT)
     /* Compute the current received video speed */
     if ((rtp->re_video_bytes == 0) && (rtp->re_video_pos == 0)) 
       /* Default value for the 1st element */
-      rtp->re_video_bytes = video_session->GetOctetsReceived();
+      rtp->re_video_bytes = new_video_octets_received;
     rtp->re_video_speed [rtp->re_video_pos] = 
-      (float) (video_session->GetOctetsReceived()
-	       - rtp->re_video_bytes)/ 1024;
-    rtp->re_video_bytes = 
-      video_session->GetOctetsReceived();
+      (float) (new_video_octets_received - rtp->re_video_bytes)/ 1024;
+    rtp->re_video_bytes = new_video_octets_received;
 
     rtp->re_video_pos++;
     if (rtp->re_video_pos >= 50) rtp->re_video_pos = 0;
   }
+  else
+    new_video_octets_received = last_video_octets_received;
 
 
   /* If we didn't receive any audio and video data this time,
      then we start the timer */
-  if (rtp->re_video_speed [rtp->re_video_pos -1] == 0
-      && rtp->re_audio_speed [rtp->re_audio_pos -1] == 0) {
+  if (new_audio_octets_received == last_audio_octets_received
+      && new_video_octets_received == last_video_octets_received) {
     
     if (!NoIncomingMediaTimer.IsRunning ()) 
       NoIncomingMediaTimer.SetInterval (0, 30);
@@ -1950,6 +1960,8 @@ GMH323EndPoint::OnRTPTimeout (PTimer &, INT)
   else
     NoIncomingMediaTimer.Stop ();
   
+  last_audio_octets_received = new_audio_octets_received;
+  last_video_octets_received = new_video_octets_received;
 
   msg = g_strdup_printf 
     (_("%.2ld:%.2ld:%.2ld  A:%.2f/%.2f   V:%.2f/%.2f"), 
